--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,5 +1,7 @@
-tabWidth: 2
-semi: false
-jsxBracketSameLine: true
 arrowParens: "avoid"
+bracketSpacing: true
+bracketSameLine: false
 quoteProps: "consistent"
+printWidth: 100
+semi: true
+tabWidth: 2
