--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "fluent-reader",
+  "name": "tags-not-cats",
   "version": "1.1.4",
-  "description": "Modern desktop RSS reader",
+  "author": "Haoyuan Liu",
+  "description": "A tag-centric RSS reader",
+  "keywords": [
+    "news",
+    "rss"
+  ],
+  "license": "BSD-3-Clause",
+  "repository": "github:tif-calin/tags-not-cats",
   "main": "./dist/electron.js",
   "scripts": {
     "build": "webpack --config ./webpack.config.js",
@@ -14,10 +21,9 @@
     "package-mas": "bash build/resignAndPackage.sh",
     "package-linux": "electron-builder --linux --x64 -p never"
   },
-  "keywords": [],
-  "author": "Haoyuan Liu",
-  "license": "BSD-3-Clause",
-  "repository": "github:yang991178/fluent-reader",
+  "dependencies": {
+    "node-polyfill-webpack-plugin": "^2.0.1"
+  },
   "devDependencies": {
     "@fluentui/react": "^7.126.2",
     "@types/lovefield": "^2.1.3",
@@ -48,8 +54,5 @@
     "typescript": "^5.8.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "node-polyfill-webpack-plugin": "^2.0.1"
   }
 }
