--- a/package.json
+++ b/package.json
@@ -22,37 +22,37 @@
     "package-linux": "electron-builder --linux --x64 -p never"
   },
   "dependencies": {
-    "node-polyfill-webpack-plugin": "^2.0.1"
+    "node-polyfill-webpack-plugin": "^4.1.0"
   },
   "devDependencies": {
-    "@fluentui/react": "^7.126.2",
+    "@fluentui/react": "^7.204.1",
+    "@redux-devtools/core": "^4.1.1",
     "@types/lovefield": "^2.1.3",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^17.0.26",
     "@types/react-redux": "^7.1.9",
     "electron": "^35.0.1",
-    "electron-builder": "^23.0.3",
+    "electron-builder": "^25.1.8",
     "electron-react-devtools": "^0.5.3",
-    "electron-store": "^5.2.0",
+    "electron-store": "^8.2.0",
     "electron-window-state": "^5.0.3",
-    "font-list": "^1.4.2",
-    "html-webpack-plugin": "^5.5.3",
-    "js-md5": "^0.7.3",
+    "font-list": "^1.5.1",
+    "html-webpack-plugin": "^5.6.3",
+    "js-md5": "^0.8.3",
     "lovefield": "^2.1.12",
-    "prettier": "2.3.2",
-    "qrcode.react": "^1.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-intl-universal": "^2.2.5",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools": "^3.5.0",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
+    "prettier": "^3.5.3",
+    "qrcode.react": "^4.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-intl-universal": "^2.12.0",
+    "react-redux": "^7.2.9",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^5.1.1",
     "rss-parser": "^3.13.0",
-    "ts-loader": "^7.0.4",
+    "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
