--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "jsx": "react",
-    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "target": "ES2019",
-    "module": "CommonJS"
+    "jsx": "react",
+    "module": "CommonJS",
+    "resolveJsonModule": true,
+    "target": "ES2019"
   }
 }
