--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -34,6 +34,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./bin/linux/x64/Fluent Reader-${{ steps.package-version.outputs.current-version }}.AppImage
-          asset_name: Fluent.Reader.${{ steps.package-version.outputs.current-version }}.AppImage
+          asset_path: ./bin/linux/x64/TNCR Reader-${{ steps.package-version.outputs.current-version }}.AppImage
+          asset_name: TNCR.Reader.${{ steps.package-version.outputs.current-version }}.AppImage
           asset_content_type: application/octet-stream
