--- a/.github/workflows/release-main.yml
+++ b/.github/workflows/release-main.yml
@@ -32,7 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Fluent Reader v${{ steps.package-version.outputs.current-version }}
+          release_name: TNCR Reader v${{ steps.package-version.outputs.current-version }}
           draft: true
           prerelease: false
 
@@ -42,8 +42,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bin/win32/x64/Fluent Reader Setup ${{ steps.package-version.outputs.current-version }}.exe
-          asset_name: Fluent.Reader.Setup.${{ steps.package-version.outputs.current-version }}.x64.exe
+          asset_path: ./bin/win32/x64/TNCR Reader Setup ${{ steps.package-version.outputs.current-version }}.exe
+          asset_name: TNCR.Reader.Setup.${{ steps.package-version.outputs.current-version }}.x64.exe
           asset_content_type: application/vnd.microsoft.portable-executable
 
       - name: Upload x86 exe to release assets
@@ -52,8 +52,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bin/win32/ia32/Fluent Reader Setup ${{ steps.package-version.outputs.current-version }}.exe
-          asset_name: Fluent.Reader.Setup.${{ steps.package-version.outputs.current-version }}.x86.exe
+          asset_path: ./bin/win32/ia32/TNCR Reader Setup ${{ steps.package-version.outputs.current-version }}.exe
+          asset_name: TNCR.Reader.Setup.${{ steps.package-version.outputs.current-version }}.x86.exe
           asset_content_type: application/vnd.microsoft.portable-executable
 
       - name: Upload x64 zip to release assets
@@ -62,8 +62,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bin/win32/x64/Fluent Reader-${{ steps.package-version.outputs.current-version }}-win.zip
-          asset_name: Fluent.Reader.Unpacked.${{ steps.package-version.outputs.current-version }}.x64.zip
+          asset_path: ./bin/win32/x64/TNCR Reader-${{ steps.package-version.outputs.current-version }}-win.zip
+          asset_name: TNCR.Reader.Unpacked.${{ steps.package-version.outputs.current-version }}.x64.zip
           asset_content_type: application/zip
 
       - name: Upload x86 zip to release assets
@@ -72,6 +72,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bin/win32/ia32/Fluent Reader-${{ steps.package-version.outputs.current-version }}-ia32-win.zip
-          asset_name: Fluent.Reader.Unpacked.${{ steps.package-version.outputs.current-version }}.x86.zip
+          asset_path: ./bin/win32/ia32/TNCR Reader-${{ steps.package-version.outputs.current-version }}-ia32-win.zip
+          asset_name: TNCR.Reader.Unpacked.${{ steps.package-version.outputs.current-version }}.x86.zip
           asset_content_type: application/zip
