--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "webpack --config ./webpack.config.js",
     "electron": "electron ./dist/electron.js",
     "start": "npm run build && npm run electron",
+    "start:dev": "tsc -b --noEmit --noCheck && webpack serve --hot --config ./webpack.config.js",
     "format": "prettier --write .",
     "package-win": "electron-builder -w appx:x64 && electron-builder -w appx:ia32 && electron-builder -w appx:arm64",
     "package-win-ci": "electron-builder -w --x64 -p never && electron-builder -w --ia32 -p never",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@fluentui/react": "^7.204.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@redux-devtools/core": "^4.1.1",
     "@types/lovefield": "^2.1.3",
     "@types/react": "^17.0.83",
@@ -47,13 +49,17 @@
     "react-dom": "^17.0.2",
     "react-intl-universal": "^2.12.0",
     "react-redux": "^7.2.9",
+    "react-refresh": "^0.17.0",
+    "react-refresh-typescript": "^2.0.10",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "reselect": "^5.1.1",
     "rss-parser": "^3.13.0",
     "ts-loader": "^9.5.2",
+    "type-fest": "^4.41.0",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
